--- a/manifest.json
+++ b/manifest.json
@@ -21,5 +21,6 @@
     "16": "images/icon16grey.png",
     "48": "images/icon48.png",
     "128": "images/icon128.png"
-  }
+  },
+  "manifest_version": 2
 }
